// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField component rendering state should match snapshot - TextField (custom icon with action): TextField custom icon with action snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-2"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-3 NatDSInputLabel-root-30 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
    onClick={[Function]}
    required={false}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      required={false}
      type="text"
      value=""
    />
    <button
      className="MuiButtonBase-root MuiIconButton-root NatDSCustomIcon-root-27 NatDSCustomIcon-root-31"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
          />
        </svg>
      </span>
    </button>
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-5 NatDSFormHelperText-root-32"
  >
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (custom icon): TextField custom icon snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-2"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-3 NatDSInputLabel-root-26 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
    onClick={[Function]}
    required={false}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      required={false}
      type="text"
      value=""
    />
    <button
      className="MuiButtonBase-root MuiIconButton-root NatDSCustomIcon-root-27 NatDSCustomIcon-root-28"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
          />
        </svg>
      </span>
    </button>
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-5 NatDSFormHelperText-root-29"
  >
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (default with empty theme): TextField default with empty theme snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-2"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-3 NatDSInputLabel-root-39 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
    required={false}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      required={false}
      type="text"
      value=""
    />
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-5 NatDSFormHelperText-root-40"
  >
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (default without placeholder): TextField default without placeholder snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-2"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-3 NatDSInputLabel-root-10 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
    required={false}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      required={false}
      type="text"
      value=""
    />
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-5 NatDSFormHelperText-root-11"
  >
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (default): TextField default snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-2"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-3 NatDSInputLabel-root-4 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
    required={false}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      required={false}
      type="text"
      value=""
    />
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-5 NatDSFormHelperText-root-6"
  >
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (disabled): TextField disabled snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-2"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-3 NatDSInputLabel-root-24 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink Mui-disabled Mui-disabled"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root Mui-disabled Mui-disabled MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
    required={false}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input Mui-disabled Mui-disabled"
      disabled={true}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      required={false}
      type="text"
      value=""
    />
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-5 NatDSFormHelperText-root-25 Mui-disabled"
  >
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (error): TextField error snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-2"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-3 NatDSInputLabel-root-18 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink Mui-error Mui-error"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
    data-state="error"
    onClick={[Function]}
    required={false}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      required={false}
      type="text"
      value=""
    />
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-5 NatDSFormHelperText-root-19 Mui-error"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-outlined-alert-cancel NatDSInputStateHelpTextProvider-icon-1 NatDSIcon-root-16 NatDSIcon-root-20"
    />
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (filled): TextField filled snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-2"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-3 NatDSInputLabel-root-12 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
    required={false}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      required={false}
      type="text"
      value="some value"
    />
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-5 NatDSFormHelperText-root-13"
  >
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (mask): TextField mask snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-2"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-3 NatDSInputLabel-root-33 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
    required={false}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      id="field"
      inputRef={[Function]}
      mask={
        Array [
          "(",
          /\\[1-9\\]/,
          /\\\\d/,
          ")",
          " ",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          "-",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
        ]
      }
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      required={false}
      type="text"
      value=""
    />
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-5 NatDSFormHelperText-root-34"
  >
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (property forwarded): TextField property forwarded snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-2"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-3 NatDSInputLabel-root-37 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
    required={false}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      required={false}
      type="email"
      value=""
    />
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-5 NatDSFormHelperText-root-38"
  >
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (readonly explicitly set to false): TextField readonly explicitly set to false snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-2"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-3 NatDSInputLabel-root-8 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
    required={false}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      readOnly={false}
      required={false}
      type="text"
      value=""
    />
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-5 NatDSFormHelperText-root-9"
  >
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (readonly explicitly set to true): TextField readonly explicitly set to true snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-2"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-3 NatDSInputLabel-root-7 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
    required={false}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      readOnly={true}
      required={false}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (required without label): TextField required without label snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-2"
>
  <div
    className="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
    required={true}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      required={true}
      type="text"
      value=""
    />
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-5 NatDSFormHelperText-root-23"
  >
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (required): TextField required snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-2"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-3 NatDSInputLabel-root-21 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
    htmlFor="field"
  >
    Label *
  </label>
  <div
    className="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
    required={true}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      required={true}
      type="text"
      value=""
    />
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-5 NatDSFormHelperText-root-22"
  >
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (success): TextField success snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-2"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-3 NatDSInputLabel-root-14 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
    data-state="success"
    onClick={[Function]}
    required={false}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      required={false}
      type="text"
      value=""
    />
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-5 NatDSFormHelperText-root-15"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-outlined-alert-check NatDSInputStateHelpTextProvider-icon-1 NatDSIcon-root-16 NatDSIcon-root-17"
    />
    Assistive text
  </p>
</div>
`;

exports[`TextField component rendering state should match snapshot - TextField (theme change): TextField theme change snapshot 1`] = `
<div
  className="MuiFormControl-root NatDSFormControl-root-2"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root NatDSInputLabel-root-3 NatDSInputLabel-root-35 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
    htmlFor="field"
  >
    Label
  </label>
  <div
    className="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
    required={false}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      id="field"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder"
      required={false}
      type="text"
      value=""
    />
  </div>
  <p
    className="MuiFormHelperText-root NatDSFormHelperText-root-5 NatDSFormHelperText-root-36"
  >
    Assistive text
  </p>
</div>
`;
